soldering Station V1 fix